--- a/classes/AccountAutomations.cls
+++ b/classes/AccountAutomations.cls
@@ -29,4 +29,8 @@ public class AccountAutomations {
         a.website = 'www.copado.com'; 
         return a;
     }
+    public static Account setDefaultURL3(Account a) {
+        a.website = 'www.copado.com'; 
+        return a;
+    }
 }
